// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unlockKeystore* should match put setWallet snapshot 1`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "payload": Promise {
        "signMessage": [Function],
        "signRawTransaction": [Function],
        "unlock": [Function],
      },
      "type": "WALLET_SET",
    },
    "channel": null,
  },
}
`;

exports[`unlockMnemonic* should match put setWallet snapshot 1`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "payload": Wallet {
        "privateKey": Object {
          "data": Array [
            49,
            233,
            127,
            57,
            92,
            171,
            198,
            250,
            163,
            125,
            138,
            157,
            107,
            177,
            133,
            24,
            124,
            53,
            112,
            78,
            123,
            151,
            108,
            122,
            17,
            14,
            47,
            14,
            171,
            55,
            195,
            68,
          ],
          "type": "Buffer",
        },
        "publicKey": undefined,
        "signMessage": [Function],
        "signRawTransaction": [Function],
        "unlock": [Function],
      },
      "type": "WALLET_SET",
    },
    "channel": null,
  },
}
`;

exports[`unlockPrivateKey should match put setWallet snapshot 1`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "payload": Wallet {
        "privateKey": Object {
          "data": Array [
            49,
            233,
            127,
            57,
            92,
            171,
            198,
            250,
            163,
            125,
            138,
            157,
            107,
            177,
            133,
            24,
            124,
            53,
            112,
            78,
            123,
            151,
            108,
            122,
            17,
            14,
            47,
            14,
            171,
            55,
            195,
            68,
          ],
          "type": "Buffer",
        },
        "publicKey": undefined,
        "signMessage": [Function],
        "signRawTransaction": [Function],
        "unlock": [Function],
      },
      "type": "WALLET_SET",
    },
    "channel": null,
  },
}
`;

exports[`unlockWeb3* should match setWallet snapshot 1`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "type": "CONFIG_NODES_STATIC_WEB3_UNSET",
    },
    "channel": null,
  },
}
`;
